force-app/main/default/objects/Facture__c/fields/AdresseEmetteurFacture__c.field-meta.xml
<CustomField>
    <fullName>AdresseEmetteurFacture__c</fullName>
    <description>Adresse de l&#39;émetteur de la facture (4 lignes)</description>
    <label>Adresse emetteur facture</label>
    <length>38</length>
    <type>Text</type>
</CustomField>