force-app/main/default/objects/Facture__c/fields/CodeDeblocageManuel__c.field-meta.xml
<CustomField>
    <fullName>CodeDeblocageManuel__c</fullName>
    <description>Code précisant les cas de déblocage manuel de l&#39;envoi du rapport avec statut contrôle facture inutile</description>
    <label>Code deblocage manuel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>