force-app/main/default/objects/Facture__c/fields/CodeEmetteurFacture__c.field-meta.xml
<CustomField>
    <fullName>CodeEmetteurFacture__c</fullName>
    <description>Code intervenant émetteur de la facture</description>
    <label>Code emetteur facture</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>