force-app/main/default/objects/Facture__c/fields/DateFacture__c.field-meta.xml
<CustomField>
    <fullName>DateFacture__c</fullName>
    <label>Date facture</label>
    <type>Date</type>
</CustomField>