force-app/main/default/objects/Facture__c/fields/EtatRecuperation__c.field-meta.xml
<CustomField>
    <fullName>EtatRecuperation__c</fullName>
    <label>Etat récupération</label>
    <length>50</length>
    <type>Text</type>
</CustomField>