force-app/main/default/objects/Facture__c/fields/Examen__c.field-meta.xml
<CustomField>
    <fullName>Examen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Examen</label>
    <referenceTo>Examen__c</referenceTo>
    <relationshipLabel>Factures</relationshipLabel>
    <relationshipName>Factures</relationshipName>
    <type>Lookup</type>
</CustomField>