force-app/main/default/objects/Facture__c/fields/Immatriculation__c.field-meta.xml
<CustomField>
    <fullName>Immatriculation__c</fullName>
    <label>Immatriculation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>