force-app/main/default/objects/Facture__c/fields/IndicateurControleFacture__c.field-meta.xml
<CustomField>
    <fullName>IndicateurControleFacture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indicateur controle facture</label>
    <type>Checkbox</type>
</CustomField>