force-app/main/default/objects/Facture__c/fields/IndicateurVDRInclus__c.field-meta.xml
<CustomField>
    <fullName>IndicateurVDRInclus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indicateur VDR inclus</label>
    <type>Checkbox</type>
</CustomField>