force-app/main/default/objects/Facture__c/fields/LibelleEcartFacture__c.field-meta.xml
<CustomField>
    <fullName>LibelleEcartFacture__c</fullName>
    <description>Libellé justificatif de l&#39;écart contrôle facture</description>
    <label>Libellé ecart facture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>