force-app/main/default/objects/Facture__c/fields/MontantFacture__c.field-meta.xml
<CustomField>
    <fullName>MontantFacture__c</fullName>
    <description>Montant facture TTC</description>
    <label>Montant facture</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>