force-app/main/default/objects/Facture__c/fields/MontantVDRHT__c.field-meta.xml
<CustomField>
    <fullName>MontantVDRHT__c</fullName>
    <label>Montant VDR HT</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>