force-app/main/default/objects/Facture__c/fields/NomEmetteurFacture__c.field-meta.xml
<CustomField>
    <fullName>NomEmetteurFacture__c</fullName>
    <description>Nom de l&#39;émetteur de la facture</description>
    <label>Nom émetteur facture</label>
    <length>27</length>
    <type>Text</type>
</CustomField>