force-app/main/default/objects/Facture__c/fields/NumeroFacture__c.field-meta.xml
<CustomField>
    <fullName>NumeroFacture__c</fullName>
    <description>N° de facture</description>
    <label>Numéro facture</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>