force-app/main/default/objects/Facture__c/fields/NumeroFactureVDR__c.field-meta.xml
<CustomField>
    <fullName>NumeroFactureVDR__c</fullName>
    <description>N° de facture véhicule de remplacement (VDR)</description>
    <label>Numéro de facture VDR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>