force-app/main/default/objects/Facture__c/fields/TelephoneEmetteurFacture__c.field-meta.xml
<CustomField>
    <fullName>TelephoneEmetteurFacture__c</fullName>
    <description>N° de téléphone de l&#39;émetteur de la facture</description>
    <label>Telephone emetteur facture</label>
    <type>Phone</type>
</CustomField>