force-app/main/default/objects/Facture__c/fields/TypeCloture__c.field-meta.xml
<CustomField>
    <fullName>TypeCloture__c</fullName>
    <label>Type de clôture</label>
    <length>50</length>
    <type>Text</type>
</CustomField>